--- a/src/main/resources/schedule.properties
+++ b/src/main/resources/schedule.properties
@@ -1,3 +1,6 @@
+#是否启动TestSchedule任务
 ifStartTestSchedule=1
+#是否启动TestSchedule的生产者
 testSchedule.ifStartProvider=1
+#是否启动TestSchedule的消费者
 testSchedule.ifStartConsumer=1
