--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -8,7 +8,8 @@ log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 
 #RollingFile
 log4j.appender.RollingFile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.RollingFile.File=logs/mini-web.log
+log4j.appender.RollingFile.File=${WORKDIR}/logs/schedule_log.log
+#log4j.appender.RollingFile.File=F://schedule_log.log
 log4j.appender.RollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.RollingFile.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 
@@ -16,4 +17,4 @@ log4j.appender.RollingFile.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 log4j.logger.com.demo.schedule=Info
 
 #log4jdbc
-log4j.logger.jdbc.sqltiming=INFO
+#log4j.logger.jdbc.sqltiming=INFO
